# arxiv-scout

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
src/arxiv_mcp/: __main__.py  arxiv_client.py  cache.py  categories.py  formatting.py  pdf_extractor.py  semantic_scholar.py  server-card.json  server.py
tests/: test_server.py
