[project]
name = "arxiv-scout"
version = "0.1.0"
description = "MCP server for searching, retrieving, and analyzing arXiv papers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.4.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "pymupdf>=1.27.1",
    "uvicorn>=0.41.0",
]

[project.scripts]
arxiv-scout = "arxiv_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_mcp"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: tests that hit real APIs (deselect with -m 'not integration')"]
addopts = "-m 'not integration'"

